--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Online Food Delivery Service in India | MyOnlineMeal.com</title>
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" media="screen (min-width:300px) and (max-width: 600px)" href="CSS/phone.css">
+    <link rel="stylesheet" media="screen  and (max-width: 600px)" href="CSS/phone.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
